-
Type:
Bug
-
Status: Resolved
-
Priority:
Trivial
-
Resolution: Fixed
-
Fix Version/s: 0.4.15
-
Component/s: Bootloader
-
Labels:
-
Module:
The values of CPU registers is displayed unaligned. You can force the bugcheck by running VM with the small amount of RAM (less than 32 MB).
The code locates here: https://git.reactos.org/?p=reactos.git;a=blob;f=boot/freeldr/freeldr/arch/i386/i386bug.c;h=f94639650f4d4b794bc6382a6c4243551df1ea75;hb=6977833e067924167e62e07ce701de35e0650b62#l178